--- a/earthquake.html
+++ b/earthquake.html
@@ -42,8 +42,44 @@
         </ul>
     </nav>  
 
-    <div class="">
-        
+    <div class="info-content">
+        <div class="details-nav">
+            <h2>Earthquake Feeds</h2>
+            <nav class="sub-nav">
+                <ul>
+                    <h3>Past Hour</h3>
+                    <a href="#"><li>Significant Earthquakes</li></a>
+                    <a href="#"><li>M4.5+ Earthquakes</li></a>
+                    <a href="#"><li>M2.5+ Earthquakes</li></a>
+                    <a href="#"><li>M1.0+ Earthquakes</li></a>
+                    <a href="#"><li>All Earthquakes</li></a>
+                </ul>
+                <ul>
+                    <h3>Past Day</h3>
+                    <a href="#"><li>Significant Earthquakes</li></a>
+                    <a href="#"><li>M4.5+ Earthquakes</li></a>
+                    <a href="#"><li>M2.5+ Earthquakes</li></a>
+                    <a href="#"><li>M1.0+ Earthquakes</li></a>
+                    <a href="#"><li>All Earthquakes</li></a>
+                </ul>
+                <ul>
+                    <h3>Past 7 Days</h3>
+                    <a href="#"><li>Significant Earthquakes</li></a>
+                    <a href="#"><li>M4.5+ Earthquakes</li></a>
+                    <a href="#"><li>M2.5+ Earthquakes</li></a>
+                    <a href="#"><li>M1.0+ Earthquakes</li></a>
+                    <a href="#"><li>All Earthquakes</li></a>
+                </ul>
+                <ul>
+                    <h3>Past 30 Days</h3>
+                    <a href="#"><li>Significant Earthquakes</li></a>
+                    <a href="#"><li>M4.5+ Earthquakes</li></a>
+                    <a href="#"><li>M2.5+ Earthquakes</li></a>
+                    <a href="#"><li>M1.0+ Earthquakes</li></a>
+                    <a href="#"><li>All Earthquakes</li></a>
+                </ul>
+            </nav>
+        </div>        
     </div>
 </body>
 </html>
