--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1>Instant, Beautiful, Geographical Data</h1>
             <h2>Tectona serves to showcase Earthquakes, Weather and Other GeoJSON data in a simple and attractive way</h2>
             <a href="geoJSON.html"><button>About GeoJSON</button></a>
-            <a href="docs/Integrated Project 2 Specification August 2018 V1.0.pdf">View Specification Doc</a>
+            <a href="docs/Integrated Project 2 Specification August 2018 V1.0.pdf">View Specification PDF</a>
         </div>
     </div>
 </body>
