--- a/authors.html
+++ b/authors.html
@@ -57,19 +57,19 @@
             </div>
             <div class="card">
                 <img src="images/apondi.jpg" alt="Apondi" style="width:100%">
-                <h1 class="title">Apondi Omondi</h1>
+                <h1 class="title">Thakane Selebalo</h1>
                 <p>Insert a short description of the author over and what they are so enthusiastic about here</p>
                 <p class="interest">Technical Interest: Machine Learning</p>
             </div>
             <div class="card">
                 <img src="images/apondi.jpg" alt="Apondi" style="width:100%">
-                <h1 class="title">Apondi Omondi</h1>
+                <h1 class="title">Rethabile Phuroe</h1>
                 <p>Insert a short description of the author over and what they are so enthusiastic about here</p>
                 <p class="interest">Technical Interest: Machine Learning</p>
             </div>
             <div class="card">
                 <img src="images/apondi.jpg" alt="Apondi" style="width:100%">
-                <h1 class="title">Apondi Omondi</h1>
+                <h1 class="title">Phillippe Rutaganza</h1>
                 <p>Insert a short description of the author over and what they are so enthusiastic about here</p>
                 <p class="interest">Technical Interest: Machine Learning</p>
             </div>
