--- a/weather.html
+++ b/weather.html
@@ -42,8 +42,11 @@
         </ul>
     </nav>  
 
-    <div class="">
-        
+    <div class="info-content">
+        <div class="details-nav">
+            <h2>Weather Mapping</h2>
+            
+        </div>        
     </div>
 </body>
 </html>
