--- a/weather.html
+++ b/weather.html
@@ -61,17 +61,19 @@
         <div class="page-content info-weather">
             <div class="weather-horizontal">
                 <div class="weather-media">
-                    <img src="http://placehold.it/150x200/DC143C/FFFFFF" alt="img">
+                    <div id="weather-image">
+                        <img src="/images/weather-icon.jpg" alt="Weather-image" />
+                    </div>
                 </div>
                 <div class="weather-content">
-                    <div class="weather-data">
-                        <div class="weather-title">
-                            <h2 class="weather-title-text">Welcome</h2>
-                        </div>
-                        <div class="weather-supporting-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Mauris sagittis pellentesque lacus eleifend lacinia...
-                        </div>
+                    <div class="weather-title">
+                        <h2 id="weather-title-text" class="weather-title-text">Welcome</h2>
+                    </div>
+                    <div class="weather-supporting-text">
+                        <p>In this page, you can query weather data of a particular place. 
+                            Please enter the latitude and longitude information in the input boxes above and click the search button.
+                            Better yet, just enter the location name and click the search button.
+                        </p>
                     </div>
                 </div>
             </div>
