--- a/authors.html
+++ b/authors.html
@@ -13,34 +13,34 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-        <nav class="sidebar-navigation">
-            <ul>
-                <a href="index.html"><li>
-                    <h2 style="font-weight: bold; font-size:32px;">T</h2>
-                    <span class="tooltip">Home</span>
-                </li></a>
-                <a href="authors.html"><li class="active">
-                    <i class="fa fa-group"></i>
-                    <span class="tooltip">Authors</span></li>
-                </a>
-                <a href="geoJSON.html"><li>
-                    <i class="fa fa-file"></i>
-                    <span class="tooltip">About GeoJSON</span>
-                </li></a>
-                <a href="earthquake.html"><li>
-                    <i class="fa fa-bolt"></i>
-                    <span class="tooltip">Earthquake Mapping</span>
-                </li></a>
-                <a href="weather.html"><li>
-                    <i class="fa fa-cloud"></i>
-                    <span class="tooltip">Weather Mapping</span>
-                </li></a>
-                <a href="#"><li>
-                    <i class="fa fa-globe"></i>
-                    <span class="tooltip">Additional</span>
-                </li></a>
-            </ul>
-        </nav>  
+    <nav class="sidebar-navigation">
+        <ul>
+            <a href="index.html"><li>
+                <h2 style="font-weight: bold; font-size:32px;">T</h2>
+                <span class="tooltip">Home</span>
+            </li></a>
+            <a href="authors.html"><li class="active">
+                <i class="fa fa-group"></i>
+                <span class="tooltip">Authors</span></li>
+            </a>
+            <a href="geoJSON.html"><li>
+                <i class="fa fa-file"></i>
+                <span class="tooltip">About GeoJSON</span>
+            </li></a>
+            <a href="earthquake.html"><li>
+                <i class="fa fa-bolt"></i>
+                <span class="tooltip">Earthquake Mapping</span>
+            </li></a>
+            <a href="weather.html"><li>
+                <i class="fa fa-cloud"></i>
+                <span class="tooltip">Weather Mapping</span>
+            </li></a>
+            <a href="airports.html"><li>
+                <i class="fa fa-globe"></i>
+                <span class="tooltip">Airports</span>
+            </li></a>
+        </ul>
+    </nav>   
 
     <div class="info-content">
         <div class="page-header">
