--- a/geoJSON.html
+++ b/geoJSON.html
@@ -35,9 +35,9 @@
                 <i class="fa fa-cloud"></i>
                 <span class="tooltip">Weather Mapping</span>
             </li></a>
-            <a href="#"><li>
+            <a href="airports.html"><li>
                 <i class="fa fa-globe"></i>
-                <span class="tooltip">Additional</span>
+                <span class="tooltip">Airports</span>
             </li></a>
         </ul>
     </nav>  
