--- a/authors.html
+++ b/authors.html
@@ -56,7 +56,7 @@
                 <p class="interest">Technical Interest: Machine Learning</p>
             </div>
             <div class="card">
-                <img src="images/apondi.jpg" alt="Apondi" style="width:100%">
+                <img src="images/juliet.jpg" alt="Apondi" style="width:100%">
                 <h1 class="title">Thakane Selebalo</h1>
                 <p>Insert a short description of the author over and what they are so enthusiastic about here</p>
                 <p class="interest">Technical Interest: Machine Learning</p>
