--- a/weather.html
+++ b/weather.html
@@ -62,7 +62,7 @@
             <div class="weather-horizontal">
                 <div class="weather-media">
                     <div id="weather-image">
-                        <img src="/images/weather-icon.jpg" alt="Weather-image" />
+                        <img src="images/weatherIcon.png" alt="Weather-image" />
                     </div>
                 </div>
                 <div class="weather-content">
