--- a/authors.html
+++ b/authors.html
@@ -52,26 +52,26 @@
             <div class="card">
                 <img src="images/apondi.jpg" alt="Apondi" style="width:100%">
                 <h1 class="title">Apondi Omondi</h1>
-                <p>Insert a short description of the author over and what they are so enthusiastic about here</p>
-                <p class="interest">Technical Interest: Machine Learning</p>
+                <p>I would like to specialize in user interface/ user interaction design and human computer interaction</p>
+                <p class="interest">UX/UI design</p>
             </div>
             <div class="card">
                 <img src="images/juliet.jpg" alt="Apondi" style="width:100%">
                 <h1 class="title">Thakane Selebalo</h1>
-                <p>Insert a short description of the author over and what they are so enthusiastic about here</p>
-                <p class="interest">Technical Interest: Machine Learning</p>
+                <p>I am interested in digitization through data manipulation and analysis</p>
+                <p class="interest">Data Manipulation</p>
             </div>
             <div class="card">
-                <img src="images/apondi.jpg" alt="Apondi" style="width:100%">
+                <img src="images/rethabile.jpg" alt="Apondi" style="width:100%">
                 <h1 class="title">Rethabile Phuroe</h1>
-                <p>Insert a short description of the author over and what they are so enthusiastic about here</p>
-                <p class="interest">Technical Interest: Machine Learning</p>
+                <p>I am interested in how machines learn and their effect in technological progress</p>
+                <p class="interest">Machine Learning</p>
             </div>
             <div class="card">
-                <img src="images/apondi.jpg" alt="Apondi" style="width:100%">
+                <img src="images/no-photo-male.jpg" alt="Apondi" style="width:100%">
                 <h1 class="title">Phillippe Rutaganza</h1>
-                <p>Insert a short description of the author over and what they are so enthusiastic about here</p>
-                <p class="interest">Technical Interest: Machine Learning</p>
+                <p>None provided</p>
+                <p class="interest">Technical Interest: None provided</p>
             </div>
         </div>
     </div>
